# bevy_tape

./: Cargo.toml  README.md
src/: lib.rs
src/record_component/: codec.rs  file_type.rs  mod.rs  px_format.rs  record.rs  record_component.rs
src/record_screen/: record.rs
src/spawn_ffmpeg_command/: mod.rs  spawn_ffmpeg.rs
