[package]
name = "bevy_tape"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "bevy_tape is a plugin built for screen recording in the bevy game engine"
repository = "https://github.com/Vaaris16/bevy_tape.git"
readme = "README.md"

[dependencies]
bevy = {version="0.19.0", features=["bevy_render"]}
wgpu = "30.0.0"
